--- a/coworkers.html
+++ b/coworkers.html
@@ -57,7 +57,7 @@ body {
               <font color="#ffffff" size=8 face=tahoma><b>&nbsp;Geometrisis<b></font>
               <br>
               <font color="#FFFFFF" face=tahoma>
-      	<b>&nbsp;Τεχνικό γραφείο μελετών &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Τοπογράφοι μηχανικοί</b>
+      	<b>&nbsp;Τεχνικό γραφείο μελετών &nbsp;&nbsp;&nbsp;&nbsp;Μοσχόπουλος Γεωργιος </b>
               </font>
                <td align="right" valign="left"><img src="earth.jpg" alt="" width="266" height="109"></td>
          </tr>
